Table users {
  id int [pk, increment]
  password varchar(128) [not null]
  last_login timestamp
  is_superuser boolean [not null]
  username varchar(150) [unique, not null]
  first_name varchar(150)
  last_name varchar(150)
  email varchar(254) [unique, not null]
  is_staff boolean [not null]
  is_active boolean [default: true]
  date_joined timestamp [default: `current_timestamp`]
}

Table profiles {
  id UUID [pk, default: `uuid_generate_v4()`]
  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp [default: `current_timestamp`]
  user_id int [ref: > users.id, unique, not null]
  phone_number varchar(15)
  avatar varchar(255)
  role varchar(16) [default: 'customer']
  note text
}

Table profiles_wishlist {
	profile_id UUID [ref: > profiles.id, not null]
	product_id UUID [ref: > products.id, not null]
	primary key (profile_id, product_id)
}

Table divisions {
  id UUID [pk, default: `uuid_generate_v4()`]
  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp [default: `current_timestamp`]
  name varchar(64) [not null]
}

Table categories {
  id UUID [pk, default: `uuid_generate_v4()`]
  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp [default: `current_timestamp`]
  division_id UUID [ref: > divisions.id, not null]
  name varchar(64) [not null]
  description text
}

Table products {
  id UUID [pk, default: `uuid_generate_v4()`]
  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp [default: `current_timestamp`]
  category_id UUID [ref: > categories.id, not null]
  name varchar(64) [not null]
  description text
  tags text
  provider UUID [ref: > profiles.id]
}

Table product_variants {
  id UUID [pk, default: `uuid_generate_v4()`]
  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp [default: `current_timestamp`]
  product_id UUID [ref: > products.id, not null]
  color UUID [ref: > colors.id]
  size UUID [ref: > sizes.id]
  image UUID [ref: > images.id, not null]
  cost decimal(10, 2) [not null]
  price decimal(10, 2) [not null]
  quantity int [not null, default: 0]
  sort_order int [default: 1]

  indexes {
    (product_id, color, size) [unique]
    (sort_order, product_id) [unique]
  }
}

Table images {
  id UUID [pk, default: `uuid_generate_v4()`]
  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp [default: `current_timestamp`]
  src varchar(255) [not null]
  alt varchar(255)
}

Table sizes {
  id UUID [pk, default: `uuid_generate_v4()`]
  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp [default: `current_timestamp`]
  name varchar(3) [not null]
}

Table colors {
  id UUID [pk, default: `uuid_generate_v4()`]
  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp [default: `current_timestamp`]
  color1_name varchar(20) [not null]
  color1_value varchar(7)
  color2_name varchar(20)
  color2_value varchar(7)
}

Table collections {
  id UUID [pk, default: `uuid_generate_v4()`]
  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp [default: `current_timestamp`]
  name varchar(64) [not null]
  description text
}

Table collection_products {
  collection_id UUID [ref: > collections.id, not null]
  product_id UUID [ref: > products.id, not null]
  primary key (collection_id, product_id)
}

Table carts {
  id UUID [pk, default: `uuid_generate_v4()`]
  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp [default: `current_timestamp`]
  customer_id UUID [ref: > profiles.id, not null]
  is_active boolean [default: true]
  note text
  cost decimal(10, 2) [default: 0]
}

Table cart_items {
  id UUID [pk, default: `uuid_generate_v4()`]
  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp [default: `current_timestamp`]
  cart_id UUID [ref: > carts.id, not null]
  product_variant_id UUID [ref: > product_variants.id, not null]
  quantity int [not null, default: 1]

  indexes {
    (cart_id, product_variant_id) [unique]
  }
}

Table orders {
  id UUID [pk, default: `uuid_generate_v4()`]
  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp [default: `current_timestamp`]
  customer_id UUID [ref: > profiles.id, not null]
  status varchar(20) [default: 'PENDING']
  total decimal(8, 2) [default: 0]
  close_reason text
}

Table order_items {
  id UUID [pk, default: `uuid_generate_v4()`]
  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp [default: `current_timestamp`]
  order_id UUID [ref: > orders.id, not null]
  product_variant_id UUID [ref: > product_variants.id, not null]
  quantity int [not null, default: 1]

  indexes {
    (order_id, product_variant_id) [unique]
  }
}

Table discount_rules {
  id UUID [pk, default: `uuid_generate_v4()`]
  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp [default: `current_timestamp`]
  starts_at timestamp
  ends_at timestamp
  title varchar(255)
  description text
  value_type varchar(255) [default: 'FIXED']
  value int
  customer_selection varchar(8) [default: 'ALL']
  target_selection varchar(8) [default: 'ALL']
  prerequisite_quantity_range int [default: 0]
  prerequisite_subtotal_range decimal(12, 2) [default: 0]
  prerequisite_to_entitlement_purchase decimal(12, 2) [default: 0]
  once_per_customer boolean [default: false]
  usage_limit smallint [default: 1]
  allocation_method varchar(255) [default: 'EACH']
  allocation_limit smallint
}

Table discount_codes {
  id UUID [pk, default: `uuid_generate_v4()`]
  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp [default: `current_timestamp`]
  code varchar(64) [unique, not null]
  discount_rule_id UUID [ref: > discount_rules.id, not null]
  starts_at timestamp
  ends_at timestamp
  usage_count smallint [default: 0]
}

Table prerequisite_to_entitlement_quantity_ratios {
  id UUID [pk, default: `uuid_generate_v4()`]
  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp [default: `current_timestamp`]
  discount_rule_id UUID [ref: > discount_rules.id, unique, not null]
  prerequisite_quantity int [not null]
  entitled_quantity int [not null]
}

Table feedbacks {
  id UUID [pk, default: `uuid_generate_v4()`]
  created_at timestamp [default: `current_timestamp`]
  updated_at timestamp [default: `current_timestamp`]
  customer_id UUID [ref: > profiles.id, not null]
  product_id UUID [ref: > products.id, not null]
  rate smallint [default: 0]
  comment text

  indexes {
    (customer_id, product_id) [unique]
  }
}